# agent_template

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: .workspace-version
.claude/rules/: agent-design.md  module-structure.md
.claude/skills/new-agent/: SKILL.md
.claude/skills/new-module/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
_template/agent/type-a-n8n-only/: README.md  workflow.json
_template/agent/type-a-n8n-only/prompts/: system.md
_template/agent/type-b-hybrid/: README.md  __init__.py  core.py  workflow.json
_template/agent/type-b-hybrid/prompts/: system.md
_template/agent/type-b-hybrid/tests/: test_core.py
_template/agent/type-c-agentloop/: README.md  __init__.py  core.py  workflow.json
_template/agent/type-c-agentloop/prompts/: system.md
_template/agent/type-c-agentloop/tests/: test_core.py
_template/agent/type-c-agentloop/tools/: __init__.py  example_tool.py
_template/module/: CLAUDE.md  README.md
_template/module/lib/: __init__.py
_template/module/service/: .dockerignore  .env.example  Dockerfile  README.md  build.sh  main.py  push.sh  pyproject.toml
deploy/: README.md
deploy/aws/: deploy.sh
deploy/azure/: deploy.sh
deploy/gcp/: deploy.sh
shared/: README.md  __init__.py
shared/claude_advisor/: __init__.py  advisor.py
shared/http_helpers/: __init__.py  health.py  logging_config.py  registry.py
shared/notion_client/: __init__.py  client.py
shared/rule_engine/: __init__.py  engine.py
workflows/: README.md
workflows/shared/: send-email.json  send-whatsapp.json
