[project]
name = "{{MODULE_NAME}}-service"
version = "0.1.0"
description = "Service del módulo {{MODULE_NAME}}"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]
